# messy-folder-reorganizer-ai

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  ROADMAP.md  original_workflow.yml  setup-hooks.sh  temp_workflow.yml
.github/workflows/: original_workflow.yml  release.yml  rust.yml  temp_workflow.yml  test-and-lints.yml
assets/: config.toml  embeddings_config.toml  llm_config.toml  rag_ml_config.toml
assets/prompts/: generate_folder_name.md  initial_sort_request.md
hooks/: pre-commit
src/: args.rs  create_source_file.rs  dirr_processing.rs  file_info.rs  files_sorting.rs  lib.rs  main.rs  olama_responce.rs  promt.rs
src/ai/: ai_request.rs  embedding_context.rs  embeddings.rs  embeddings_request.rs  llm_request.rs  mod.rs  ollama_protocol.rs  openai_client.rs  openai_protocol.rs  prompt.rs  promt.rs
src/app_core/: cluster_processor.rs  destination_processor.rs  migration_plan_builder.rs  migrations_processor.rs  mod.rs  rollback_processor.rs  sources_processor.rs
src/bd/: quadrant.rs
src/commands/: apply.rs  mod.rs  process.rs  rollback.rs
src/configuration/: args.rs  config.rs  config_loader.rs  consts.rs  embedded_assets.rs  ignore_list.rs  init.rs  mod.rs  read_config.rs
src/console/: confirmation.rs  errors.rs  messages.rs  mod.rs  table.rs
src/db/qdrant/: client.rs  collection.rs  mod.rs  utils.rs
src/errors/: app_error.rs  app_error_handler.rs  mod.rs
src/files/: create_file.rs  dirr_processing.rs  file_info.rs  mod.rs  reorganiser.rs
src/files/file_collector/: handlers.rs  mod.rs  utils.rs  walker.rs
src/fs/: consts.rs  create_file.rs  file_info.rs  mod.rs  path.rs
src/fs/migration/: executor.rs  fs_entry_migration.rs  logger.rs  migrator.rs  mod.rs  plan.rs  rollback.rs  runner.rs  storage.rs
src/fs/parser/: config.rs  handlers.rs  utils.rs  walker.rs
src/ml/: agglomerative_clustering.rs  dbscan.rs  hierarchical_clustering.rs  mod.rs
src/workflow/: destination_processor.rs  index_destination.rs  migration_plan_builder.rs  mod.rs  plan_processor.rs  process_sources.rs  sources_processor.rs  unknown_files_processor.rs
test_cases/: cases.md
test_cases/clustering/: generate.sh
test_cases/embedding_only/: generate.sh
test_cases/failed_migration/: generate.sh
test_cases/file_collision/: README.md  generate.sh
test_cases/medium_size/: generate.sh
test_cases/use_dest_root/: generate.sh
tests/: README.md  integration.rs
tests/clustering/: generate.sh
tests/configs/.messy-folder-reorganizer-ai/: llm_config.toml
tests/embedding_partial/: generate.sh
tests/file_collision/: case.json
tests/helpers/: check.rs  cli.rs  config.rs  mod.rs  prepare_fs.rs
tests/test_cases/clustering/: case.json
tests/test_cases/embedding_only/: case.json
(+16 files in other folders)
