[package]
name = "mess-cleaner-ai"
version = "0.1.0"
edition = "2021"
authors = ["Eugene Perminov"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
path-clean = "1.0.1"
