[package]
name = "messy-folder-reorganizer-ai"
version = "0.2.1"
edition = "2021"
authors = ["Eugene Perminov <perminov.eugene@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PerminovEugene/messy-folder-reorganizer-ai"
homepage = "https://github.com/PerminovEugene/messy-folder-reorganizer-ai"
description = "An AI-powered tool to organize messy folders intelligently."
readme = "README.md"
keywords = ["AI", "file-organization", "automation", "cli", "Rust", "Ollama", "Qdrant", "RAG", "ML"]
categories = ["command-line-utilities", "artificial-intelligence"]
rust-version = "1.84"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
path-clean = "1.0.1"
colored = "3.0.0"
toml = "0.8.20"
serde_derive = "1.0.217"
qdrant-client = "1.13.0"
uuid = { version = "1.15.1", features = ["v4"] }
regex = "1.11.1"
futures = "0.3.31"
prettytable-rs = "0.10.0"
thiserror = "2.0.12"
chrono = "0.4.40"

[dev-dependencies]
tempfile = "3.19.1"
